--- a/gitClient/views/windows/CommitWin.axaml
+++ b/gitClient/views/windows/CommitWin.axaml
@@ -1,27 +1,42 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Width="400"
-				Height="200"
+        Height="250"
         x:Class="gitClient.views.CommitWin"
-				WindowStartupLocation="CenterOwner"
+        WindowStartupLocation="CenterOwner"
         Title="Commit">
-	<Panel>
-		<ExperimentalAcrylicBorder IsHitTestVisible="False">
-			<ExperimentalAcrylicBorder.Material>
-				<ExperimentalAcrylicMaterial
-					BackgroundSource="Digger"
-					TintColor="Black"
-					TintOpacity="1"
-					MaterialOpacity="0.65"/>
-			</ExperimentalAcrylicBorder.Material>
-		</ExperimentalAcrylicBorder>	
-	<StackPanel Margin="20">
-		<TextBox Watermark="Commit Message" Height="100" AcceptsReturn="True"
-						 Name="MsgCommit"/>
-		<WrapPanel>
-			<Button Click="Btn_Commit">Commit Selected</Button>
-			<Button Click="Btn_Cancel">Cancel</Button>
-		</WrapPanel>
-	</StackPanel>
-	</Panel>
+  <Panel>
+    <ExperimentalAcrylicBorder IsHitTestVisible="False">
+      <ExperimentalAcrylicBorder.Material>
+        <ExperimentalAcrylicMaterial
+          BackgroundSource="Digger"
+          TintColor="Black"
+          TintOpacity="1"
+          MaterialOpacity="0.65" />
+      </ExperimentalAcrylicBorder.Material>
+    </ExperimentalAcrylicBorder>
+    <StackPanel Margin="20">
+      <TextBlock Name="Headline" />
+        
+      <ScrollViewer Height="50"
+                    Margin="0,10,0,10"
+                    VerticalScrollBarVisibility="Auto">
+        
+        <ItemsControl Name="ctrlToCommit" ItemsSource="{Binding}">
+          <ItemsControl.ItemTemplate>
+            <DataTemplate>
+              <TextBlock Text="{Binding Path}" />
+            </DataTemplate>
+          </ItemsControl.ItemTemplate>
+        </ItemsControl>
+      </ScrollViewer>
+        
+      <TextBox Watermark="Commit Message" Height="70" AcceptsReturn="True"
+               Name="MsgCommit" />
+      <WrapPanel>
+        <Button Click="Btn_Commit">Commit</Button>
+        <Button Click="Btn_Cancel">Cancel</Button>
+      </WrapPanel>
+    </StackPanel>
+  </Panel>
 </Window>
