--- a/gitClient/MainWindow.axaml
+++ b/gitClient/MainWindow.axaml
@@ -6,107 +6,112 @@
         mc:Ignorable="d" d:DesignWidth="1200" d:DesignHeight="800"
         x:Class="gitClient.MainWindow"
         Title="gitClient"
-				Width="1200"
-				Height="768"
-				WindowStartupLocation="CenterScreen"
-				TransparencyLevelHint="AcrylicBlur"
-				Background="Transparent"				
-				ExtendClientAreaToDecorationsHint="True">
-	<Panel>
-		<Panel.Styles>
-			<Style Selector="GridSplitter">
-				<Setter Property="Width" Value="1"></Setter>
-			</Style>
-		</Panel.Styles>
-		<ExperimentalAcrylicBorder IsHitTestVisible="False">
-			<ExperimentalAcrylicBorder.Material>
-				<ExperimentalAcrylicMaterial
-					BackgroundSource="Digger"
-					TintColor="Black"
-					TintOpacity="1"
-					MaterialOpacity="0.75"/>
-			</ExperimentalAcrylicBorder.Material>
-		</ExperimentalAcrylicBorder>
-		<StackPanel>	
-			<Menu Margin="0,10,0,0" VerticalAlignment="Top" DockPanel.Dock="Top">
-				<MenuItem Header="Repository" >
-					<MenuItem Click="BtnOpenRepo_Click" Name="btnOpenRepo" Header="Open" />
-					<MenuItem Header="Clone"  Click="BtnCloneRepo"/>
-					<MenuItem Header="Create" Click="BtnCreateRepo"/>
-				</MenuItem>
-				<MenuItem Header="Branches">
-					<MenuItem Header="Create local" Click="BtnBranchCreate"/>
-					<MenuItem Header="Pull from remote"
-										Click="BtnCreateBranchFromRem"/>
-					<MenuItem Header="Switch" Click="BtnBranchSwitch" />
-					<MenuItem Header="Merge" Click="BtnMergeBranch"/>
-					<MenuItem Header="Rebase" Click="BtnRebase"/>
-					<MenuItem Header="Delete" Click="BtnBranchDel" />
-				</MenuItem>
-				<MenuItem Header ="Settings" Click="BtnSettings_Click"/>
-				<MenuItem Header="?"  Click="BtnAbout_Click"/>
-			</Menu>
-			<WrapPanel Margin="10">
-				<TextBlock Text="Current Repo: "
-				           VerticalAlignment="Center"/>
-				<TextBlock Name="CurRepo" FontStyle="Italic" FontWeight="Bold" VerticalAlignment="Center"/>
-				<TextBlock Text="(" VerticalAlignment="Center"/>
-				<TextBlock Name="CurBranch" Foreground="LawnGreen" FontWeight="Bold"
-				           VerticalAlignment="Center"/>
-				<TextBlock Text=")" VerticalAlignment="Center"/>
-				<Button Content="Open in VSC" Click="Btn_VscOpen" 
-				        Margin="15, 0, 0,0"/>
-			</WrapPanel>
-		</StackPanel>
-			<Grid ColumnDefinitions ="   *,1, * "
-						RowDefinitions="  Auto,140, Auto,*, Auto"
-						Margin="10,80,10,10">
-				<!--Spalte 1 -->
-				<TextBlock Grid.Row="0"
-									 Grid.Column="0"
-									 FontWeight="Bold" Margin="0,10,0,0">
-					Uncommited Changes in WorkDir
-				</TextBlock>
-				<ScrollViewer Grid.Column="0"
-											Grid.Row="1"
-											Grid.RowSpan="3"
-											Margin="0,0,10,0">
-							<views:FileState Name="ctrlFileState"	/>
-				</ScrollViewer>
-				<GridSplitter Grid.Column="1"
-											Grid.RowSpan="4"
-											Opacity="0.2"
-											Margin="10"
-											ResizeDirection="Columns"/>
-					<!--SpaltenWechsel -->
-					<TextBlock Grid.Row="0"
-								 Grid.Column="2"
-								 Margin="10,10,0,0"
-								 FontWeight="Bold">
-						Branches
-					</TextBlock>
-					<views:BranchView Name="ctrlBranchLog" Grid.Column="2" Grid.Row="1"/>
-					<TextBlock Grid.Column="3"
-										 Grid.Row="2"
-										 Margin="10,20,0,10"
-										 FontWeight="Bold"
-										 HorizontalAlignment="Left"
-										 VerticalAlignment="Top">
-						Log
-					</TextBlock>
-				<ScrollViewer Grid.Row="3"
-											Grid.Column="3"
-											Margin="10,0,0,0">
-					<views:LogView Name="ctrlCommitLog"/>
-				</ScrollViewer>
-				<WrapPanel  Grid.Column="0" Grid.Row="4" Margin="0,10,0,0" >
-					<Button Name="RepoRefresh"
-									Click="Btn_Refresh">
-						Fetch
-					</Button>
-					<Button Margin="0,0,0,0" Click="Btn_Push" Name="CtrlBtnPush"></Button>
-					<Button Click="Btn_Pull" Name="CtrlBtnPull">Pull</Button>
-				</WrapPanel>
-			</Grid>
-	</Panel>
+        Width="1200"
+        Height="768"
+        WindowStartupLocation="CenterScreen"
+        TransparencyLevelHint="AcrylicBlur"
+        Background="Transparent"
+        ExtendClientAreaToDecorationsHint="True">
+  <Panel>
+    <Panel.Styles>
+      <Style Selector="GridSplitter">
+        <Setter Property="Width" Value="1"></Setter>
+      </Style>
+    </Panel.Styles>
+    <ExperimentalAcrylicBorder IsHitTestVisible="False">
+      <ExperimentalAcrylicBorder.Material>
+        <ExperimentalAcrylicMaterial
+          BackgroundSource="Digger"
+          TintColor="Black"
+          TintOpacity="1"
+          MaterialOpacity="0.75" />
+      </ExperimentalAcrylicBorder.Material>
+    </ExperimentalAcrylicBorder>
+    <StackPanel>
+      <Menu Margin="0,10,0,0" VerticalAlignment="Top" DockPanel.Dock="Top">
+        <MenuItem Header="Repository">
+          <MenuItem Click="BtnOpenRepo_Click" Name="btnOpenRepo" Header="Open" />
+          <MenuItem Header="Clone" Click="BtnCloneRepo" />
+          <MenuItem Header="Create" Click="BtnCreateRepo" />
+        </MenuItem>
+        <MenuItem Header="Branches">
+          <MenuItem Header="Create local" Click="BtnBranchCreate" />
+          <MenuItem Header="Pull from remote"
+                    Click="BtnCreateBranchFromRem" />
+          <MenuItem Header="Switch" Click="BtnBranchSwitch" />
+          <MenuItem Header="Merge" Click="BtnMergeBranch" />
+          <MenuItem Header="Rebase" Click="BtnRebase" />
+          <MenuItem Header="Delete" Click="BtnBranchDel" />
+        </MenuItem>
+        <MenuItem Header="Settings" Click="BtnSettings_Click" />
+        <MenuItem Header="?" Click="BtnAbout_Click" />
+      </Menu>
+      <WrapPanel Margin="10">
+        <TextBlock Text="Current Repo: "
+                   VerticalAlignment="Center" />
+        <TextBlock Name="CurRepo" FontStyle="Italic" FontWeight="Bold" VerticalAlignment="Center" />
+        <TextBlock Text="(" VerticalAlignment="Center" />
+        <TextBlock Name="CurBranch" Foreground="LawnGreen" FontWeight="Bold"
+                   VerticalAlignment="Center" />
+        <TextBlock Text=")" VerticalAlignment="Center" />
+        <Button Content="Open in VSC" Click="Btn_VscOpen"
+                Margin="15, 0, 0,0" />
+      </WrapPanel>
+    </StackPanel>
+    <Grid ColumnDefinitions="   *,1, * "
+          RowDefinitions="  Auto,140, Auto,*, Auto"
+          Margin="10,80,10,10">
+      <!--Spalte 1 -->
+      <TextBlock Grid.Row="0"
+                 Grid.Column="0"
+                 FontWeight="Bold" Margin="0,10,0,0">
+        Uncommited Changes in WorkDir
+      </TextBlock>
+      <ScrollViewer Grid.Column="0"
+                    Grid.Row="1"
+                    Grid.RowSpan="3"
+                    Margin="0,0,10,0">
+        <views:FileState Name="ctrlFileState" />
+      </ScrollViewer>
+      <GridSplitter Grid.Column="1"
+                    Grid.RowSpan="4"
+                    Opacity="0.2"
+                    Margin="10"
+                    ResizeDirection="Columns" />
+      <!--SpaltenWechsel -->
+      <TextBlock Grid.Row="0"
+                 Grid.Column="2"
+                 Margin="10,10,0,0"
+                 FontWeight="Bold">
+        Branches
+      </TextBlock>
+      <views:BranchView Name="ctrlBranchLog" Grid.Column="2" Grid.Row="1" />
+      <WrapPanel Grid.Column="3"
+                 Grid.Row="2"
+                 Margin="10,20,0,10"
+                 HorizontalAlignment="Left"
+                 VerticalAlignment="Top">
+        <TextBlock
+          FontWeight="Bold">
+          Log
+        </TextBlock>
+        <TextBlock  Text=" ( Commits: "/>
+        <TextBlock  Name="CommitCount"/>
+        <TextBlock  Text=")"/>
+      </WrapPanel>
+      <ScrollViewer Grid.Row="3"
+                    Grid.Column="3"
+                    Margin="10,0,0,0">
+        <views:LogView Name="ctrlCommitLog" />
+      </ScrollViewer>
+      <WrapPanel Grid.Column="0" Grid.Row="4" Margin="0,10,0,0">
+        <Button Name="RepoRefresh"
+                Click="Btn_Refresh">
+          Fetch
+        </Button>
+        <Button Margin="0,0,0,0" Click="Btn_Push" Name="CtrlBtnPush"></Button>
+        <Button Click="Btn_Pull" Name="CtrlBtnPull">Pull</Button>
+      </WrapPanel>
+    </Grid>
+  </Panel>
 </Window>
